--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm src/index.js",
-    "devStart":"npx nodemon src/index.js"
+    "dev":"npx nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
